# data_agent

./: .gitignore  EXAMPLES.md  README.md  native_transparent_agent.py  pydantic_agent_executor.py  pyproject.toml  queries.json  requirements.txt  requirements_analysis_techniques.txt  retry_ledger.py  run_agent.py  run_batch_queries.py  transparent_agent.py  transparent_agent_executor.py
config/: anthropic_pricing.tsv  anthropic_pricing_raw.txt  available_libraries.txt  config.yaml  openai_pricing.tsv
config/rubrics/: causal_analysis_rubric.yaml  factual_analysis_rubric.yaml  pattern_analysis_rubric.yaml
lib/: agent_tools.py
queries/: queries.json
src/idea_generation_mvp/: README.md  __init__.py  execution_runner.py  export_portfolio.py  run_mvp.py  run_mvp_no_execution.py
src/idea_generation_mvp/config/: mvp_config.yaml
src/idea_generation_mvp/core/: __init__.py  seeds.py  specifications.py
src/idea_generation_mvp/evaluation/: __init__.py  scorer.py
src/idea_generation_mvp/evolution/: __init__.py  operators.py
src/idea_generation_mvp/execution/: __init__.py  adapter.py
src/idea_generation_mvp/inspiration/: __init__.py  events.py  techniques.py
templates/: causal_analysis_agent_prompt.txt  causal_inference_execution_refinement_prompt.txt  data_analysis_agent_prompt.txt  factual_analysis_agent_prompt.txt  judging_prompt.txt  pattern_analysis_agent_prompt.txt  rubric_based_judge_prompt.txt
tests/: __init__.py  conftest.py  test_batch_processing.py  test_cli_interface.py  test_integration.py  test_judging.py  test_local_llm_debugging.py  test_pandas_warning_hypothesis.py  test_pricing.py  test_pydantic_agent_executor.py  test_runner_utils.py  test_token_pricing.py  test_token_pricing_parametrized.py  test_tool_retry_debug.py
tests/idea_generation_mvp/: __init__.py  test_inspiration_libraries.py  test_integration.py  test_scoring_system.py  test_seed_generation.py
tools/utils/: cherry-pick.py  download_dataset.py  judge_results.py  runner_utils.py
